# frystl

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  frystl-assert.hpp  frystl-defines.hpp  frystl.natvis  mf_vector.hpp  static_deque.hpp  static_vector.hpp  toy.cpp
tests/: SelfCount.hpp  test-mfv.cpp  test-sd.cpp  test-sv.cpp  toy  toy.cpp
